welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
	for (a<-1 to 6 ) {avance()}
}

